--- a/index.html
+++ b/index.html
@@ -4,8 +4,12 @@
   <link href="connect4.css" rel="stylesheet">
 </head>
 <body>
-<button id="start-game-btn">Start Game</button>
+  <input id="p1-color" type="text" placeholder="player 1 color?">
+  <input id="p2-color" type="text" placeholder="player 2 color?">
+ 
+<button id="start-game">Start Game</button>
 <div id="game">
+  
   <table id="board"></table>
 </div>
 
