--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
   <link href="connect4.css" rel="stylesheet">
 </head>
 <body>
-  <input id="p1-color" type="text" placeholder="player 1 color?">
-  <input id="p2-color" type="text" placeholder="player 2 color?">
+  <input id="p1-color" type="text" placeholder="enter player 1 color">
+  <input id="p2-color" type="text" placeholder="enter player 2 color">
  
 <button id="start-game">Start Game</button>
 <div id="game">
